--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-cors-headers==3.11.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 Pillow==9.0.1
+psycopg2==2.9.5
 PyJWT==2.3.0
 pytz==2021.3
 sqlparse==0.4.2
