--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
       - /home/ubuntu/database:/var/lib/postgresql/data:rw   
   web:
     build: .
+    image: bromx/api
     command: python manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
