--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
       - /home/ubuntu/database:/var/lib/postgresql/data:rw   
   web:
     build: .
+    image: bromx/frontend
     command: python manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
@@ -25,7 +26,7 @@ services:
     image: bromx/frontend
     command: npx serve build
     ports:
-      - "3000:3000"
+      - "3030:3000"
     depends_on:
       - web
 
