connected db and backend

--- a/k8ecom/backend/backendapp.yml
+++ b/k8ecom/backend/backendapp.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
-kind: Depolyment
+kind: Deployment
 metadata:
-  name: backend-depolyment
+  name: backend-deployment
   labels:
     app: backend
 spec:
@@ -9,32 +9,28 @@ spec:
   selector:
     matchLabels:
       app: backend
-    template:
-      metadata:
-        labels:
-          app: backend
-      spec:
-        # volumes
-        containers:
-        - name: backend
-          image: bromx/backend
-          ports:
+  template:
+    metadata:
+      labels:
+        app: backend
+    spec:
+      containers:
+      - name: backend
+        image: bromx/backend
+        ports:
           - containerPort: 8000
-          # volume mount
-          envFrom:
-          - ConfigMapRef:
-              name: db-config
+        env:
+            - name: DATABASE_URL
+              value: postgresql://admin:admin@db-service:5432/ecom
 ---
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
   name: backend-service
 spec:
   selector:
     app: backend
-    type: NodePort
-    ports:
+  ports:
     - protocol: TCP
-      ports: 8000
+      port: 8000
       targetPort: 8000
-      NodePort: 30002
