--- a/k8ecom/db/db-config.yml
+++ b/k8ecom/db/db-config.yml
@@ -5,6 +5,5 @@ metadata:
 data:
   DATABASE_HOST: postgres
   DATABASE_PORT: "5432"
+  DATABASE_USERNAME: admin
   DATABASE_NAME: ecom
-  DATABASE_USER: $(DATABASE_USER)
-  DATABASE_PASSWORD: $(DATABASE_PASSWORD)
